V7.1: Multi-agent V7.0 ONNX real inference + all-module clean install
Backend changes:
- OnnxLLMService: ONNX Runtime 1.19.2 API (OptLevel, LongBuffer, Optional<Result>)
- AiChatRealController: /onnx/generate + /onnx/status endpoints
- OnnxLLMAdapter: HTTP RestTemplate → ai-service
- ModelVO/ModelServiceImpl/Index.vue: self/commercial category classification
- MultiAgentService: LlmResponse record, sendTokenUpdate() with emitter
- AlertEngine: notify(channel) method
- AlertMetricsService: Map.ofEntries() for >10 entries
- OnnxInferenceService: LongBuffer tensor, Optional<Result>, Map inversion

Build fixes:
- spring-boot-maven-plugin: <id>repackage</id> + <phase>none</phase> for all modules
  (prevents boot JAR from breaking Maven dependency resolution)
- All child poms: fix malformed XML, add skip=true to spring-boot plugin
- minimax-platform: remove broken spring-boot plugin from parent
- Maven settings: Huawei HTTP mirror for all repos

Fixes:
- AiChatRealController: duplicate agentClient assignment
- MultiAgentService: 3-arg → 4-arg callLlm (returns LlmResponse)